The Tab Title Bar (view-header) should no longer overlap the workspace content #98

--- a/src/scss/Plugins/Core/graph.scss
+++ b/src/scss/Plugins/Core/graph.scss
@@ -37,7 +37,7 @@
 
 .show-view-header .workspace-split.mod-root {
 	.graph-controls {
-		top: calc(var(--header-height) + var(--size-4-3));
+		top: var(--size-4-3);
 
 		&:not(.is-close) {
 			max-height: calc(100% - var(--header-height) - 25px);
