--- a/src/scss/User Interface/scrollBar.scss
+++ b/src/scss/User Interface/scrollBar.scss
@@ -39,11 +39,6 @@ body:not(.native-scrollbars) {
 	box-shadow: unset;
 }
 
-.show-view-header .mod-root .cm-scroller::-webkit-scrollbar-track,
-.show-view-header .mod-root .view-content::-webkit-scrollbar-track {
-	margin-top: calc(var(--header-height) - 1px) !important;
-}
-
 .theme-light,
 .theme-dark {
 	div.suggestion-container .suggestion::-webkit-scrollbar-track {
