--- a/src/scss/User Interface/workspace.scss
+++ b/src/scss/User Interface/workspace.scss
@@ -36,12 +36,9 @@ body:not(.css-settings-manager) .workspace-split.mod-left-split::before {
 
 /* #region  [UI] View Header */
 :is(.is-focused .workspace-leaf.mod-active .view-header, .view-header) {
-	position: fixed;
 	width: 100%;
 	padding: 0 var(--size-4-2);
-	background: var(--background-secondary-blur);
-	-webkit-backdrop-filter: blur(var(--blur-intensity));
-	backdrop-filter: blur(var(--blur-intensity));
+	background: var(--background-secondary);
 }
 
 .workspace-tabs .view-header {
